2008-11-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules: update guile to 1.8.5, and pass
	--enable-error-on-warning=no as it fails to build with -Werror
	with newer gcc.  (closes: #558571)

2008-11-01  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/tarball.py: added helpful message when a
	tarball branch is not correct.

2008-11-01  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/base.py: ignore errors loading bootstrap modules
	when checking for its uptodateness.

2008-11-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: revert dbus-python MD5
	update.  (closes: #558833)

2008-11-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: deskbar-applet branched for
	2.24.

2008-10-31  Dan Winship  <danw@gnome.org>

	* modulesets/gnome-external-deps-2.26.modules: add libproxy
	(proposed for 2.26)

	* modulesets/gnome-suites-2.26.modules: libsoup now suggests
	libproxy

2008-10-30  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-2.24.modules: Fix the location of the Clutter
	Vala bindings.

	* modulesets/gnome-2.26.modules: Drop clutter 0.6 and use the current
	stable version (0.8).

2008-10-29  Zeeshan Ali (Khattak)  <zeenshanak@gnome.org>

	* modulesets/gnome-2.24.modules: gupnp-media-server moved from o-hand
	to GNOME SVN and renamed to Rygel.

2008-10-29  Zeeshan Ali (Khattak)  <zeenshanak@gnome.org>

	* modulesets/gnome-2.24.modules: Vala release update (0.4.0).

2008-10-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.24.modules: gnome-devel-docs branched for
	2.24.

2008-10-25  Lucas Rocha  <lucasr@gnome.org>

	* modulesets/gnome-suites-2.26.modules: add cheese dependency on
	gnome-desktop.

2008-10-25  Lucas Rocha  <lucasr@gnome.org>

	* modulesets/gnome-external-deps-2.26.modules: add hal dependency on
	PolicyKit as by default it PK support is activated.

2008-10-25  Lucas Rocha  <lucasr@gnome.org>
