@@ -1,5 +1,12 @@
 2008-11-01  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/errors.py, jhbuild/main.py, jhbuild/versioncontrol/cvs.py,
+	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/tarball.py:
+	updated to remove things that got deprecated in Python 2.6 (while
+	keeping it compatible with 2.3 at least).  (closes: #558216)
+
+2008-11-01  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/bootstrap.modules: update guile to 1.8.5, and pass
 	--enable-error-on-warning=no as it fails to build with -Werror
 	with newer gcc.  (closes: #558571)
